# meson_template

./: .gitignore  README.md  meson.build
src/: main.cpp
test/: meson.build
test/src/: test.cpp
